# DAT6-KubernetesController

./: .dockerignore  .gitignore  BASELINE.md  Cargo.toml  Dockerfile  EXPERIMENT_PLAYBOOK.md  Makefile  README.md
.gopath/pkg/sumdb/sum.golang.org/: latest
app/: .dockerignore  Cargo.toml  Dockerfile
app/src/: main.rs
k8s/app/overlays/baseline/: deployment-patch.yaml
k8s/app/overlays/baseline-prestop-bad/: deployment-patch.yaml
k8s/app/overlays/burst/: deployment-patch.yaml
k8s/app/overlays/s1-early-readiness/: deployment-patch.yaml
k8s/app/overlays/s2-drain-verification/: deployment-patch.yaml
k8s/base/: deployment.yaml  kustomization.yaml
k8s/controller/base/: deployment.yaml  kustomization.yaml  rbac.yaml
k8s/controller/overlays/baseline/: deployment-patch.yaml  kustomization.yaml
k8s/controller/overlays/s1-early-readiness/: deployment-patch.yaml
k8s/overlays/baseline/: deployment-patch.yaml
k8s/overlays/long-requests/: deployment-patch.yaml
k8s/overlays/s1-early-readiness/: deployment-patch.yaml
k8s/overlays/s2-drain-verification/: deployment-patch.yaml  kustomization.yaml
kind/: cluster.yaml
observability/prometheus/: values.yaml
scripts/: aggregate_repeats.py  check_run_loss.py  collect_metrics.py  compare.py  extract_shutdown_durations.py  plot_timeline.py  run_all_auto.sh  run_repeats.sh  run_scenario.sh  stop_experiment.sh  summarize_run.py
scripts/k6/: load.js  load_direct.js
src/: controller.rs  decommission.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  policy.rs
(+1 files in other folders)
