[package]
name = "drainable-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "net"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
serde_json = "1.0"
